name:                napm
version:             0.1.0.0
synopsis:            napm is not a password manager
description:         napm is not a password manager. It's a password
                     generator designed to be used like a password
                     manager. You supply a 'seed' passphrase which must
                     be remembered; this is used as a salt to generate
                     context-dependent passwords using a cryptographic
                     hash function.
homepage:            https://github.com/fractalcat/napm
license:             MIT
license-file:        LICENSE
author:              Sharif Olorin
maintainer:          sio@tesser.org
copyright:           2014-2015 Sharif Olorin
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10
category:            System

source-repository    head
  type:              git
  location:          git@github.com:fractalcat/napm.git

library
  exposed-modules:     Napm.Password
                       Napm.Context
                       Napm.Options
                       Napm.Types
                       Napm.Util
  default-language:    Haskell2010
  hs-source-dirs:      lib
  build-depends:       base >=4.5 && <5,
                       ansi-wl-pprint,
                       base64-bytestring,
                       bifunctors,
                       bytestring,
                       containers,
                       cryptohash,
                       directory,
                       filepath,
                       mtl,
                       lens,
                       optparse-applicative,
                       text,
                       transformers,
                       trifecta,
                       unix
  ghc-options:         -Wwarn
                       -Wall

executable napm
  main-is:             Main.hs
  build-depends:       base >=4.5 && <5,
                       ansi-wl-pprint,
                       bifunctors,
                       containers,
                       directory,
                       mtl,
                       napm,
                       optparse-applicative >= 0.11,
                       text,
                       transformers,
                       transformers-compat
  Hs-source-dirs:      src
  default-language:    Haskell2010
  ghc-options:         -Wwarn
                       -Wall

test-suite napm-test
  hs-source-dirs:      tests
  main-is:             NapmTest.hs
  type:                exitcode-stdio-1.0
  default-language:    Haskell2010
  build-depends:       base >=4.5 && <5,
                       hspec,
                       napm,
                       random,
                       text
